--- a/package.json
+++ b/package.json
@@ -10,6 +10,9 @@
   },
   "dependencies": {
     "@expo/metro-runtime": "~3.2.1",
+    "@gluestack-style/react": "^1.0.56",
+    "@gluestack-ui/config": "^1.1.18",
+    "@gluestack-ui/themed": "^1.1.31",
     "@react-native-async-storage/async-storage": "^1.15.9",
     "@react-native-community/slider": "^4.5.2",
     "@react-native-picker/picker": "^2.7.7",
@@ -31,7 +34,7 @@
     "react-native-reanimated": "~3.10.1",
     "react-native-safe-area-context": "4.10.1",
     "react-native-screens": "3.31.1",
-    "react-native-svg": "^15.3.0",
+    "react-native-svg": "^13.4.0",
     "react-native-web": "~0.19.10",
     "styled-components": "^5.3.3",
     "tinycolor2": "^1.6.0",
