--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@expo-google-fonts/inter": "^0.2.3",
     "@expo/metro-runtime": "~3.2.1",
     "@gluestack-style/react": "^1.0.56",
     "@gluestack-ui/config": "^1.1.18",
@@ -21,6 +22,7 @@
     "@react-navigation/stack": "^6.3.29",
     "axios": "^1.7.2",
     "expo": "^51.0.14",
+    "expo-linear-gradient": "~13.0.2",
     "expo-location": "^17.0.1",
     "native-base": "^2.15.2",
     "react": "18.2.0",
@@ -38,7 +40,8 @@
     "react-native-web": "~0.19.10",
     "styled-components": "^5.3.3",
     "tinycolor2": "^1.6.0",
-    "uuid": "^8.3.2"
+    "uuid": "^8.3.2",
+    "expo-font": "~12.0.7"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9"
