--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
     "@react-navigation/stack": "^6.3.29",
     "axios": "^1.7.2",
     "expo": "^51.0.14",
+    "expo-apple-authentication": "~6.4.1",
+    "expo-local-authentication": "~14.0.1",
     "expo-location": "^17.0.1",
     "native-base": "^2.15.2",
     "react": "18.2.0",
@@ -31,6 +33,7 @@
     "react-native-elements": "^3.4.3",
     "react-native-gesture-handler": "~2.16.1",
     "react-native-modal": "^13.0.1",
+    "react-native-radio-buttons-group": "^3.1.0",
     "react-native-reanimated": "~3.10.1",
     "react-native-safe-area-context": "4.10.1",
     "react-native-screens": "3.31.1",
