--- a/package.json
+++ b/package.json
@@ -9,7 +9,6 @@
     "web": "expo start --web"
   },
   "dependencies": {
-    "@expo-google-fonts/inter": "^0.2.3",
     "@expo/metro-runtime": "~3.2.1",
     "@gluestack-style/react": "^1.0.56",
     "@gluestack-ui/config": "^1.1.18",
@@ -22,8 +21,10 @@
     "@react-navigation/stack": "^6.3.29",
     "axios": "^1.7.2",
     "expo": "^51.0.14",
-    "expo-linear-gradient": "~13.0.2",
+    "expo-linear-gradient": "^13.0.2",
+    "expo-localization": "^15.0.3",
     "expo-location": "^17.0.1",
+    "i18n-js": "^4.4.3",
     "native-base": "^2.15.2",
     "react": "18.2.0",
     "react-dom": "18.2.0",
@@ -40,8 +41,7 @@
     "react-native-web": "~0.19.10",
     "styled-components": "^5.3.3",
     "tinycolor2": "^1.6.0",
-    "uuid": "^8.3.2",
-    "expo-font": "~12.0.7"
+    "uuid": "^8.3.2"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9"
